--- a/style.css
+++ b/style.css
@@ -51,11 +51,13 @@ nav ul li {
 }
 
 nav ul li a {
+  font-size: large;
   text-decoration: none;
   color: #333;
-  padding: 5px 10px;
+  padding: 10px 20px;
   border-radius: 5px;
   transition: background-color 0.3s ease;
+  font-weight: bolder;
 }
 
 nav ul li a:hover {
@@ -138,8 +140,6 @@ section {
 }
 
 footer {
-  border-radius: 5px;
-  text-align: center;
   padding: 10px;
   background-color: #333;
   color: #fff;
@@ -215,7 +215,7 @@ ul.skills-list li {
 }
 
 #sobre {
-  background-color: #f5f5f5;
+  background-color: #fff;
   padding: 60px 0;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -239,5 +239,18 @@ ul.skills-list li {
 .about-content p {
   font-size: 18px;
   line-height: 1.6;
-  color: #333;
+  color: #6a6969;
+}
+
+.about-image-container {
+  width: 30%;
+  float: left;
+}
+
+.about-image {
+  height: 20vh;
+  object-fit: cover;
+  border-radius: 50%;
+  opacity: 0.95;
+  box-shadow: 0 4px 15px rgb(0, 0, 0);
 }
