--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ ul.skills-list li {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   text-decoration: none;
-  transition: background-color 0.3s ease;
+  transition: all 0.3s ease;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   font-weight: bold;
 }
